# wfh

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md
agent/: README_SERVICE.md  activity_collector.py  agent.py  agent_requirements.txt  config.json  config_manager.py  database_manager.py  employee_install_script.sh  install.bat  install_service_linux.sh  install_service_mac.sh  install_service_windows.bat  main.py  network_manager.py  screenshot_manager.py  service_wrapper.py
attached_assets/: Pasted--pip-install-r-agent-requirements-txt-Collecting-requests-2-31-0-from-r-agent-requirements-txt--1757062119936_1757062119943.txt  Pasted-AuthContext-state-hasToken-false-isAuthenticated-false-isInitialized-false-AuthContext-tsx-1-1757496571385_1757496571386.txt  Pasted-Database-connection-error-Textual-SQL-expression-SELECT-1-should-be-explicitly-declared-as-text--1757494182873_1757494182874.txt  Pasted-I-want-to-build-a-WFH-employee-monitoring-system-for-my-company-Please-help-me-design-and-implement-1757053753975_1757053753976.txt  Pasted-PS-C-Users-basav-Downloads-wfh-agent-windows-ls-Directory-C-Users-basav-Downloads-wfh-a-1757399686485_1757399686486.txt  Pasted-psql-postgresql-neondb-owner-npg-ULn8YVXzpx3R-ep-ancient-paper-aeexzy3k-c-2-us-east-2-aws-neon-tec-1757062941433_1757062941434.txt  Pasted-react-router-dom-js-v-e55a104c-209-Uncaught-Error-You-cannot-render-a-Router-inside-another-Rout-1757493897489_1757493897491.txt
browser-extension/: README.md  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+21 files in other folders)
