[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi==0.104.1",
    "passlib[bcrypt]==1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "schedule>=1.2.2",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
